fix usb list panel z-index conflict

--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
   position: absolute;
   bottom: 50px;
   right: 20px;
-  z-index: 99999;
+  z-index: 19002;
 }
 
 .seed-performance__toggle,
